samples/_failures_safe/1761159549_5e67dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ca9164e.c: In function ‘main’:
./samples/SAFE/__tmp_5ca9164e.c:205:23: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  205 |     int token_count = token
      |                       ^~~~~
      |                       Token
./samples/SAFE/__tmp_5ca9164e.c:205:23: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5ca9164e.c:205:5: error: expected ‘,’ or ‘;’ at end of input
  205 |     int token_count = token
      |     ^~~
./samples/SAFE/__tmp_5ca9164e.c:205:5: error: expected declaration or statement at end of input
